# AI-Life-Decision-Assistant

life-decision-open/: .env.example  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
life-decision-open/backend/: __init__.py  agent.py  memory.py
life-decision-open/env/: environment.py  reward.py
life-decision-open/frontend/: index.html  script.js  style.css
life-decision-open/graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py
life-decision-open/server/: app.py
life-decision-open/tasks/: __init__.py  easy_task.py  medium_task.py
