[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "life-decision-openenv"
version = "2.0.0"
description = "AI Life Decision Assistant - OpenEnv Reinforcement Learning Environment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "OpenEnv Team"}
]
keywords = [
    "reinforcement-learning",
    "decision-making",
    "openenv",
    "llm",
    "fastapi"
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/USERNAME/life-decision-openenv"
Repository = "https://huggingface.co/spaces/USERNAME/life-decision-openenv"
